# plandog

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
plandog_cli/: __init__.py  client.py  main.py  mock_server.py  transfer.py  ui.py
tests/: test_client.py  test_ui.py
