[project]
name = "plandog-cli"
version = "0.0.0"
description = "Remote terminal client for PlanDog server"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "PlanDog Team" }
]

dependencies = [
    "websockets>=12.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
plandog-cli = "plandog_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plandog_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
